--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="overlay">
             <div class="main-box">
             <div class="navigation">
-                <nav class="container">
+        <nav class="container">
                 <span class="logo">
                     <a href="#start"><img src="img/logo.png" alt=""></a>
                 </span>
@@ -25,8 +25,10 @@
                     <li><a href="#iron">Artykuły Żelazne</a></li>
                     <li><a href="#contact">Kontakt</a></li>
                 </ul>
-            </div>
+                <div class="menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></div>
         </nav>
+        
+    </div>
             <div class="main-content container">
                 <h2 class="main-title">Zajmujemy się montażem i serwisem systemów chłodniczych<br>oraz sprzedażą artykułów żelaznych</h2>
                 <div class="buttons">
@@ -188,13 +190,24 @@
         });
     </script>
     <script>
-    $(window).on('scroll', function() {
-        if($(window).scrollTop()) {
-            $('.navigation').addClass('black');
-        }
-        else{
-            $('.navigation').removeClass('black');
-        }
+    $(document).ready(function(){
+        $(window).on('scroll', function() {
+            if($(window).scrollTop()) {
+                $('.navigation').addClass('black');
+            }
+            else{
+                $('.navigation').removeClass('black');
+            }
+        });
+        $('.menu-toggle').click(function(){
+            $('nav').toggleClass('active');
+        });
+        $('.menu').click(function(){
+            $('nav').removeClass('active');
+        });
+        $('.menu li a').click(function(){
+            $('nav').removeClass('active');
+        });
     });
     </script>    
 </body>
